[gd_scene load_steps=5 format=3 uid="uid://davwoi23glv5y"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_vmqm4"]
[ext_resource type="Shader" path="res://scenes/menu/pause_menu.gdshader" id="2_rrue5"]
[ext_resource type="AudioStream" uid="uid://23lgobqt0d0y" path="res://assets/sfx/tap.wav" id="2_u2bt1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t06c4"]
shader = ExtResource("2_rrue5")
shader_parameter/amount = 3.0

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vmqm4")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_t06c4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -58.0
offset_right = 93.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Go to Main Menu"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_u2bt1")

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
